--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 management.endpoints.web.exposure.include=health,info
+user.service.url=http://localhost:8081
+product.service.url=http://localhost:8083
